[gd_scene load_steps=3 format=3 uid="uid://ceup3skshi2qq"]

[ext_resource type="Texture2D" uid="uid://cyr5sesnrhubo" path="res://art/potion1.png" id="1_kjspq"]
[ext_resource type="Script" uid="uid://c28c42eqegb6f" path="res://sprites/saved_potion_button.gd" id="2_acopu"]

[node name="SavedPotionButton" type="TextureButton"]
offset_right = 40.0
offset_bottom = 40.0
texture_normal = ExtResource("1_kjspq")
script = ExtResource("2_acopu")

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
